# generate-llvm-ir

./: .gitignore  CMakeLists.txt  ReadMe.md  docker-run.sh  generator.cpp  main.cpp  run.sh  x86.Dockerfile
include/: generator.hpp
test/: CMakeLists.txt  call_compiled_ir.cpp  common_tests.cpp  main.cpp
test/include/: header.h
